--- a/network/templates/network/new_post.html
+++ b/network/templates/network/new_post.html
@@ -1,11 +1,16 @@
 {% extends "network/layout.html" %}
 
+{% load static %}
+
 {% block body %}
 
     {% if user.is_authenticated %}
 
         {% if empty_post %}
-            <div class="alert alert-danger" role="alert"> {{ empty_post }} </div>
+        <div class="alert alert-danger alert-dismissible fade show">
+            {{ empty_post }}
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+        </div>
         {% endif %}
 
         <form action="" method="post">
@@ -15,4 +20,8 @@
         </form>
     {% endif %}
 
+{% endblock %}
+
+{% block script %}
+    <script src="{% static 'network/main.js' %}"></script>
 {% endblock %}
