refactor: use more meaningful names

--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -29,7 +29,7 @@
                 {% if post.is_liked %}
                     <a href="#" class="like-post-btn btn btn-primary">Unlike</a>
                 {% else %}
-                    <a href="#" class="like-post btn btn-primary">Like</a>
+                    <a href="#" class="like-post-btn btn btn-primary">Like</a>
                 {% endif %}
 
                 {% if post.user == current_user %}
