--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -5,7 +5,7 @@
 {% block body %}
 
 {% if user.is_authenticated %}
-    <a href="{% url 'new_post' %}"> New Post </a>
+    <a href="{% url 'new_post' %}" id="new-post"> + New Post </a>
 {% endif %}
 
     {% if posted %}
@@ -39,7 +39,9 @@
 
             <div class="edit-card-body">
                 <textarea name="editing" class="edit-post-textarea" rows="6" cols="80"></textarea>
-                <button type="button" class="save-post-btn btn btn-outline-primary">Save</button>
+                <div class="save-button">
+                    <button type="button" class="save-post-btn btn btn-outline-primary">Save</button>
+                </div>
             </div>
         </div>
 
