--- a/network/templates/network/new_post.html
+++ b/network/templates/network/new_post.html
@@ -16,7 +16,9 @@
         <form action="" method="post">
             {% csrf_token %}
             <textarea name="post-content" rows="5" placeholder="What's on your mind, {{ user }}?"></textarea>
-            <input type="submit" value="Post" name="post-button" class="btn btn-primary">
+            <div class="post-button">
+                <button type="button" value="Post" name="post-button" class="btn btn-primary">Post</button>
+            </div>
         </form>
     {% endif %}
 
