--- a/network/templates/network/profile.html
+++ b/network/templates/network/profile.html
@@ -7,7 +7,7 @@
     <div class="card">
         <div class="card-body">
             <h2 class="card-title"> {{ username }} </h2>
-            <p class="card-text">Followers: {{ followers }}</p>
+            <p class="card-text followers">Followers: {{ followers }}</p>
             <p class="card-text">Following: {{ following }} </p>
             {% if show_follow_button %}
                 {% if to_follow %}
@@ -24,10 +24,14 @@
             <p class="card-header"> <strong><a href="{% url 'profile' post.user %}"> {{ post.user }} </a></strong> on {{ post.timestamp }} </p>
                 <div class="card-body">
                     <p class="card-text"> {{ post.content }} </p>
-                    <p class="card-text"> Likes: {{ post.likes }} </p>
-                    <a href="#" class="btn btn-primary">Like</a>
-                    {% if post in user_posts %}
-                        <p> You can edit this post!</p>
+                    {% with post.liked_posts.all as likes %}
+                        <p class="likes card-text">Likes: {{ likes.count }}</p>
+                    {% endwith %}
+
+                    {% if post.is_liked %}
+                        <button type="button" class="like-post-btn btn btn-primary">Unlike</button>
+                    {% else %}
+                        <button type="button" class="like-post-btn btn btn-primary">Like</button>
                     {% endif %}
                 </div>
         </div>
