--- a/network/templates/network/profile.html
+++ b/network/templates/network/profile.html
@@ -4,11 +4,16 @@
 
 {% block body %}
 
-    <div class="card">
-        <div class="card-body">
-            <h2 class="card-title"> {{ username }} </h2>
-            <p class="card-text followers">Followers: {{ followers }}</p>
-            <p class="card-text">Following: {{ following }} </p>
+    <div class="card profile">
+        <div class="card-body body-profile">
+            <div class="profile-header">
+                <i class="fa fa-user"></i>
+                <h2 class="card-title"> {{ user.username }} </h2>
+            </div>
+            <p class="card-text-profile"> <strong>Joined:</strong> {{ user.date_joined }} </p>
+            <p class="card-text-profile"> <strong>Last login:</strong> {{ user.last_login }}</p>
+            <p class="card-text-profile followers"><strong>Followers:</strong> {{ followers }}</p>
+            <p class="card-text-profile"><strong>Following:</strong> {{ following }} </p>
             {% if show_follow_button %}
                 {% if to_follow %}
                     <button type="button" class="follow-button btn btn-primary">Follow</button>
