chore: style no posts message

--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -50,7 +50,7 @@
 
 
     {% empty %}
-        <p> No posts yet.</p>
+        <h3 class="no-posts"> No posts yet</h3>
     {% endfor %}
 
     {% if show_pagination %}
